--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,7 @@ install:
 script: sh bin/travis-run.sh
 after_success:
     - coveralls
+notifications:
+  email:
+    on_success: never  # default: change
+    on_failure: always # default: always
