--- a/test.ini
+++ b/test.ini
@@ -10,6 +10,9 @@ use = config:../../ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
 ckan.plugins = harvest datajson datajson_harvest
+ckan.harvest.mq.type = redis
+ckan.harvest.timeout = 5
+ckan.legacy_templates = false
 
 # Logging configuration
 [loggers]
