Test harvest child before parent
clean parent search function

Add redis for docker queue test and fix test

--- a/docker_test.ini
+++ b/docker_test.ini
@@ -10,6 +10,7 @@ use = config:../../src/ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
 ckan.plugins = harvest datajson datajson_harvest
+ckan.harvest.mq.type = redis
 
 # Logging configuration
 [loggers]
