--- a/docker_test.ini
+++ b/docker_test.ini
@@ -9,8 +9,15 @@ error_email_from = paste@localhost
 use = config:../../src/ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
-ckan.plugins = harvest datajson datajson_harvest
+ckan.plugins = stats geodatagov datagov_harvest ckan_harvester geodatagov_geoportal_harvester z3950_harvester arcgis_harvester waf_harvester_collection geodatagov_csw_harvester geodatagov_doc_harvester geodatagov_waf_harvester geodatagov_miscs spatial_metadata spatial_query resource_proxy spatial_harvest_metadata_api datagovtheme datajson_harvest
 ckan.harvest.mq.type = redis
+
+ckanext.geodatagov.bureau_csv.url=https://resources.data.gov/schemas/dcat-us/v1.1/omb_bureau_codes.csv
+ckanext.geodatagov.bureau_csv.url_default=https://resources.data.gov/schemas/dcat-us/v1.1/omb_bureau_codes.csv
+
+# Hide non-existent functions at theme (https://github.com/GSA/catalog.data.gov/issues/50) 
+ckanext.datagovtheme.use.archiver=false
+ckanext.datagovtheme.use.qa=false
 
 # Logging configuration
 [loggers]
