--- a/test-classic-catalog-ckan-2.3.ini
+++ b/test-classic-catalog-ckan-2.3.ini
@@ -9,7 +9,7 @@ error_email_from = paste@localhost
 use = config:../ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
-ckan.plugins = harvest datajson datajson_harvest
+ckan.plugins = harvest datajson datajson_harvest geodatagov datagovtheme
 ckan.harvest.mq.type = redis
 ckan.harvest.mq.hostname = redis
 ckan.harvest.mq.redis_db = 1
@@ -18,6 +18,9 @@ ckan.harvest.timeout = 5
 ckan.legacy_templates = false
 sqlalchemy.url = postgresql://ckan:pass@db/ckan
 solr_url = http://solr:8983/solr/ckan
+
+ckanext.geodatagov.bureau_csv.url=https://resources.data.gov/schemas/dcat-us/v1.1/omb_bureau_codes.csv
+ckanext.geodatagov.bureau_csv.url_default=https://resources.data.gov/schemas/dcat-us/v1.1/omb_bureau_codes.csv
 
 # Logging configuration
 [loggers]
