--- a/test-inventory.ini
+++ b/test-inventory.ini
@@ -9,7 +9,7 @@ error_email_from = paste@localhost
 use = config:../../ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
-ckan.plugins = datajson stats
+ckan.plugins = usmetadata datajson stats dcat_usmetadata
 ckan.harvest.mq.type = redis
 ckan.harvest.timeout = 5
 ckan.legacy_templates = false
@@ -20,6 +20,8 @@ ckanext.geodatagov.bureau_csv.url_default=https://resources.data.gov/schemas/dca
 # Hide non-existent functions at theme (https://github.com/GSA/catalog.data.gov/issues/50) 
 ckanext.datagovtheme.use.archiver=false
 ckanext.datagovtheme.use.qa=false
+
+ckanext.datajson.inventory_links_enabled=True
 
 # Logging configuration
 [loggers]
