--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ pyyaml
 lepl
 jsonschema==2.4.0
 rfc3987
+future
 
 # ckanext-harvest
 -e git+https://github.com/ckan/ckanext-harvest.git#egg=ckanext-harvest
