--- a/test.ini
+++ b/test.ini
@@ -9,7 +9,7 @@ error_email_from = paste@localhost
 use = config:/srv/app/src/ckan/test-core.ini
 ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
-ckan.plugins = datajson
+ckan.plugins = datajson harvest datajson_harvest
 ckan.legacy_templates = true
 
 
