--- a/.env
+++ b/.env
@@ -12,12 +12,10 @@ CKAN_SYSADMIN_EMAIL=your_email@example.com
 TZ=UTC
 
 # Database connections (TODO: avoid duplication)
-CKAN_SQLALCHEMY_URL=postgresql://ckan:ckan@db/ckan
 CKAN_DATASTORE_WRITE_URL=postgresql://ckan:ckan@db/datastore
 CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore
 
 # Test database connections
-TEST_CKAN_SQLALCHEMY_URL=postgres://ckan:ckan@db/ckan_test
 TEST_CKAN_DATASTORE_WRITE_URL=postgresql://ckan:ckan@db/datastore_test
 TEST_CKAN_DATASTORE_READ_URL=postgresql://datastore_ro:datastore@db/datastore_test
 
@@ -32,15 +30,13 @@ TEST_CKAN_REDIS_URL=redis://redis:6379/1
 
 # Core settings
 CKAN__STORAGE_PATH=/var/lib/ckan
+CKAN__PLUGINS: datajson harvest datajson_harvest
 
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
 CKAN_SMTP_USER=user
 CKAN_SMTP_PASSWORD=pass
 CKAN_SMTP_MAIL_FROM=ckan@localhost
-
-# Extensions
-CKAN__PLUGINS=envvars image_view text_view recline_view datastore datapusher datagov_harvest ckan_harvester geodatagov datajson datajson_harvest geodatagov_miscs z3950_harvester arcgis_harvester geodatagov_geoportal_harvester waf_harvester_collection geodatagov_csw_harvester geodatagov_doc_harvester geodatagov_waf_harvester spatial_metadata spatial_query report qa archiver datagovtheme datagovcatalog googleanalyticsbasic dcat dcat_json_interface structured_data
 
 # Harvest settings
 CKAN__HARVEST__MQ__TYPE=redis
@@ -67,5 +63,5 @@ CKAN___BROKER_HOST=redis://redis/1
 CKAN___CELERY_RESULT_BACKEND=redis
 CKAN___REDIS_HOST=redis
 CKAN___REDIS_PORT=6379
-CKAN___REDIS_DB=0
+CKAN___REDIS_DB=1
 CKAN___REDIS_CONNECT_RETRY=True
