--- a/setup.cfg
+++ b/setup.cfg
@@ -4,3 +4,6 @@ omit=ckanext/datajson/tests/*
 [flake8]
 max-line-length = 127
 ignore = E402  # TODO disable once future.standard_libary is removed
+
+[tool:pytest]
+norecursedirs=ckanext/datajson/tests/nose
