specify redis to be used for message queue

--- a/test.ini
+++ b/test.ini
@@ -11,6 +11,7 @@ ckan.site_title = My Test CKAN Site
 ckan.site_description = A test site for testing my CKAN extension
 ckan.plugins = datajson harvest datajson_harvest
 ckan.legacy_templates = true
+ckan.harvest.mq.type = redis
 
 
 # Logging configuration
