use postgres as db user for pg_isready
otherwise it used root and gives error

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -32,7 +32,7 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: postgres
     healthcheck:
-      test: ["CMD", "pg_isready"]
+      test: ["CMD", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
