add ckanext.datajson.inventory_links_enabled into test.ini
somehow this is not working for us
config['ckanext.datajson.inventory_links_enabled'] = "True"

--- a/test.ini
+++ b/test.ini
@@ -12,6 +12,7 @@ ckan.site_description = A test site for testing my CKAN extension
 ckan.plugins = datajson harvest datajson_harvest
 ckan.legacy_templates = true
 ckan.harvest.mq.type = redis
+ckanext.datajson.inventory_links_enabled = True
 
 
 # Logging configuration
