--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ lepl
 jsonschema==2.4.0
 rfc3987
 future
+pylons
 
 # ckanext-harvest
 -e git+https://github.com/ckan/ckanext-harvest.git#egg=ckanext-harvest
