Update setup and error assertions

--- a/test.ini
+++ b/test.ini
@@ -13,6 +13,7 @@ ckan.plugins = datajson harvest datajson_harvest
 ckan.legacy_templates = true
 ckan.harvest.mq.type = redis
 ckanext.datajson.inventory_links_enabled = True
+ckanext.datajson.url_enabled = True
 
 
 # Logging configuration
