fixed issue with environment variable CKAN__PLUGINS; incorrect syntax

--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ TEST_CKAN_REDIS_URL=redis://redis:6379/1
 
 # Core settings
 CKAN__STORAGE_PATH=/var/lib/ckan
-CKAN__PLUGINS: datajson harvest datajson_harvest
+CKAN__PLUGINS=datajson harvest datajson_harvest
 
 CKAN_SMTP_SERVER=smtp.corporateict.domain:25
 CKAN_SMTP_STARTTLS=True
