--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Install requirements
         run: pip install flake8 pycodestyle
       - name: Check syntax
-        run: flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics --exclude ckan
+        run: flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics --exclude ckan,nose
       - name: Run flake8
-        run: flake8 . --count --show-source --statistics --exclude ckan
+        run: flake8 . --count --show-source --statistics --exclude ckan,nose
 
   test:
     strategy:
